# autouri

./: pyproject.toml
autouri/: __init__.py  abspath.py  autouri.py  cli.py  gcsuri.py  httpurl.py  loc_aux.py  metadata.py  ntp_now.py  s3uri.py
